--- a/challenge/src/App.css
+++ b/challenge/src/App.css
@@ -15,6 +15,8 @@
 
 .App-header {
   background-color: #282c34;
+/*   background-image: url('../src/resources/img/backGround.jpg');
+  background-size: cover; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -26,6 +28,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.Img {
+  width: 400px;
 }
 
 @keyframes App-logo-spin {
