--- a/challenge/src/components/main/mainPage.css
+++ b/challenge/src/components/main/mainPage.css
@@ -7,6 +7,7 @@
     border: 3px solid red;
 /*     margin: 0;
     padding: 0; */
+    opacity: 0.3;
   }
 
   .mainPic {
@@ -19,9 +20,10 @@
     position: absolute;
    /*  margin-left: 100px; */
  left: 50%;
-
+    /* size: 100%; */
     color: red;
-    width: 100px;
+    max-width: 200px;
+    width: auto;
 
 /*     padding-bottom: 100px; */
   }
