--- a/challenge/src/components/main/mainPage.css
+++ b/challenge/src/components/main/mainPage.css
@@ -1,32 +1,56 @@
 
 
-.mainScreen {
-    /* display: block; */
-    position: relative;
-    width: 100%;
-    border: 3px solid red;
-/*     margin: 0;
-    padding: 0; */
-    opacity: 0.3;
+
+.big {
+
+  margin-left: 5%;
+  margin-right: 60%;
+  border: 3px solid red;
+}  
+
+
+.cont {
+    
+    
+    /* transform: rotate(90deg); */
+    background-image: url('../../resources/img/Frame.png');
+    background-size: 90%;
+    background-repeat: no-repeat;
+    border: 5px solid blue;
+    /* width: 100%; */
+   /*  max-width: 1000px; */
+    padding-bottom: 50%;
+    /* padding-top: 30%; */
+    /* margin-top: -5%; */
+    
+   
+    /* top: 50px; */
   }
 
-  .mainPic {
-    width: 100%;
+  .btnCont {
 
+    border: 5px solid rgb(158, 40, 105);
+    /* max-width: 90%; */
+    /* height: 50%; */
+    padding-bottom: 20%;
   }
+
+  
+
 
   .newGameBtn {
-    /* display: inline-block; */
-    position: absolute;
+    /* display: inline-block;
+    position: absolute; */
    /*  margin-left: 100px; */
- left: 50%;
+    /* left: 50%; */
     /* size: 100%; */
     color: red;
-    max-width: 200px;
-    width: auto;
+    width: 80%;
+    /* width:; */
+    padding-bottom: 1em;
+    
+
+    
 
 /*     padding-bottom: 100px; */
   }
-
-  
-  
