--- a/challenge/src/components/test_pictures/testPic.css
+++ b/challenge/src/components/test_pictures/testPic.css
@@ -16,16 +16,20 @@ span {
   flex-direction: column;
   align-items: center;
   border: 2px solid green;
+  width: 10vw;
+  height: 16vw;
 }
 
 .Cont button {
   padding-bottom: 50%;
   background-size: cover;
+  width: 10vw;
+  height: 16vw;
 }
 
 .rock {
   background-image: url('../../resources/img/rock.png');
-  /* background-size: cover; */
+  /* background-size: 10vw; */
  /*  padding-left: 10em;
   padding-bottom: 10em; */
   border: 2px solid green;
