--- a/challenge/src/components/app/App.css
+++ b/challenge/src/components/app/App.css
@@ -1,13 +1,15 @@
 body {
     /* width: auto; */
-   /*  background: content-box radial-gradient(crimson, skyblue); */
+    /* background: content-box radial-gradient(crimson, skyblue); */
     background-color:#1f1c1c;
     background-image: url('../../resources/img/backGround.jpg');
+  /*   background-image: url('../../resources/img/enemyFrame.jpg'); */
     background-size: 90%;
     background-repeat: no-repeat;
     
     /* background-position: auto center; */
     border: 3px solid green;
+
 
     background-position: 50% -5%;
     
