Попытка начтроить рандом, новый хук

--- a/challenge/src/components/enemyPlayField/enemyPlayField.css
+++ b/challenge/src/components/enemyPlayField/enemyPlayField.css
@@ -13,13 +13,17 @@
 .enemyFieldContent {
   position: absolute;
   border: 2px solid green;
-  top: 4%;
+  margin-top: -17%;
   
 }
 
-.enemyCard {
+.enemyCard, .empty {
   /* position: absolute; */
   width: 7vw;
   height: 11vw;
  
+}
+
+.active {
+  border: 3px solid white;
 }
