--- a/challenge/src/components/enemyPlayField/enemyPlayField.css
+++ b/challenge/src/components/enemyPlayField/enemyPlayField.css
@@ -12,18 +12,29 @@
 
 .enemyFieldContent {
   position: absolute;
+ /*  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 3%; */
+  display: grid;
+  grid-template-columns: repeat(6, 12%); /* 6 колонок */
+
   border: 2px solid green;
   margin-top: -17%;
+  width: 40%;
   
+
 }
 
-.enemyCard, .empty {
+.enemyCard {
   /* position: absolute; */
-  width: 7vw;
-  height: 11vw;
- 
+  width: 6vw;
+  height: 7vw;
+
+
+/* margin-bottom: 10px; */
+border: 1px solid white;
+/* object-fit: contain; */
 }
 
-.active {
-  border: 3px solid white;
-}
+
