--- a/challenge/src/components/buySaleBar/buySaleBar.css
+++ b/challenge/src/components/buySaleBar/buySaleBar.css
@@ -5,6 +5,10 @@
     margin-top: 0%;
     margin-left: 70%;
     width: 15%;
-    
 
+}
+
+button:disabled {
+  opacity: 0.6;
+  text-decoration: none;
 }
