--- a/challenge/src/components/buySaleBar/buySaleBar.css
+++ b/challenge/src/components/buySaleBar/buySaleBar.css
@@ -1,17 +1,11 @@
  .Contmytest {
     position: relative;
     border: 1px solid yellow;
-
     margin-top: 0%;
     margin-left: 70%;
     width: 15%;
-
 }
 
-/* button:disabled {
-  opacity: 0.6;
-  text-decoration: none;
-} */
 
 .neon-button {
   position: relative;
@@ -59,7 +53,7 @@
   display: block;
 }
 
-/* Анимация границ */
+
 .neon-button span:nth-child(1) {
   top: 0;
   left: -100%;
@@ -118,3 +112,37 @@
   0% { bottom: -100%; }
   50%,100% { bottom: 100%; }
 }
+
+
+/* 
+.Contmytest {
+  display: flex;
+  justify-content: space-around;
+  background: rgba(0, 0, 0, 0.7);
+  padding: 15px;
+  border-top: 1px solid #03e9f4;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.neon-button {
+  position: relative;
+  padding: 8px 16px;
+  background: transparent;
+  border: none;
+  color: white;
+  font-size: 1vw;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.neon-button span {
+  position: absolute;
+  background: #03e9f4;
+}
+
+.neon-button:hover {
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff;
+} */
