--- a/challenge/src/components/myPlayField/myPlayField.css
+++ b/challenge/src/components/myPlayField/myPlayField.css
@@ -1,15 +1,9 @@
 .myFieldContent {
   position: absolute;
-    border: 3px solid white;
-/*     margin-left: 9%;
-  margin-right: 60%; */
+  border: 3px solid white;
   display: flex;
   justify-content: space-around;
-  /* background-image: url('../../resources/img/enemyFrame.jpg'); */
   background-size: contain;
- /*  width: 30vw;
-  height: 26vw; */
-/* left: 9%; */
 }
 
 .myFieldAll {
@@ -22,20 +16,15 @@ span {
 }
 
 .Cont {
-  
   display: flex;
   flex-direction: column;
   align-items: center;
   border: 2px solid green;
   width: 10vw;
   height: 16vw;
-
-  /* background-repeat: no-repeat; */
-
 }
 
 .Cont button {
-  
   padding-bottom: 50%;
   background-size: cover;
   width: 5vw;
@@ -54,31 +43,37 @@ span {
   background-image: url('../../resources/img/paper.png');
 }
 
-/* .myFieldPic {
-
-  position: absolute;
-  width: 30vw;
-  height: 18vw;
-  background-image: url('../../resources/img/Frame.png');
-  background-size: 100%;
-  top: 0;
-  z-index: 5;
-  
-} */
 
 .playFieldImg{
   position: absolute;
-
   width: 32vw;
   height: 16vw;
-
+}
+/* 
+.myFieldAll {
+  position: relative;
+  margin-top: 2vh;
 }
 
-/* .myFieldPic {
-  position: absolute;
+.myButton {
+  width: 80px;
+  height: 80px;
+  border: none;
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  transition: all 0.3s;
+  filter: drop-shadow(0 0 5px #03e9f4);
+}
 
-  width: 35vw;
-  height: 16vw;
-  
-} */
+.myButton:hover {
+  transform: scale(1.1);
+  filter: drop-shadow(0 0 15px #03e9f4);
+}
 
+.myButton:disabled {
+  opacity: 0.5;
+  filter: none;
+}
+
+ */
