--- a/challenge/src/components/app/App.css
+++ b/challenge/src/components/app/App.css
@@ -9,6 +9,7 @@
 body {
       width: 100%;
       height: 100vh;
+      color: white;
       background: 
         /* Базовый сине-фиолетовый градиент */
         radial-gradient(
@@ -17,7 +18,7 @@ body {
           #050314 100%
         );
       position: relative;
-      overflow: hidden;
+      /* overflow: hidden; */
       z-index: -1;
     }
 
