--- a/challenge/src/components/buySaleBar/buySaleBar.css
+++ b/challenge/src/components/buySaleBar/buySaleBar.css
@@ -1,5 +1,6 @@
  .Contmytest {
-    position: relative;
+    position: absolute;
+    top: 350px;
     border: 1px solid yellow;
     margin-top: 0%;
     margin-left: 70%;
