--- a/challenge/src/components/myPlayField/myPlayField.css
+++ b/challenge/src/components/myPlayField/myPlayField.css
@@ -1,7 +1,9 @@
 /* Основной контейнер */
 .myFieldAll {
-  position: relative;
+  position: absolute;
   width: 35%;
+/*   height: 45%; */
+  top: 300px;
   margin: 3% 9% 0 0;
   min-height: 200px;
   background: rgba(0, 0, 0, 0.7);
