--- a/challenge/src/components/gamePage/gamePage.css
+++ b/challenge/src/components/gamePage/gamePage.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.7);
+    color: black;
     display: flex;
     justify-content: center;
     align-items: center;
