Стилизация текста кнопок

--- a/challenge/src/components/buySaleBar/buySaleBar.css
+++ b/challenge/src/components/buySaleBar/buySaleBar.css
@@ -88,6 +88,7 @@
     background: transparent;
     border: none;
     font-size: 1vw;
+    font-family: 'Orbitron', sans-serif;
     text-transform: uppercase;
     letter-spacing: 1px;
     cursor: pointer;
