Изменены стили и добавлено разделение на разряды чисел

--- a/challenge/src/components/buySaleBar/buySaleBar.css
+++ b/challenge/src/components/buySaleBar/buySaleBar.css
@@ -89,7 +89,7 @@
     border: none;
     font-size: 1vw;
     font-family: 'Orbitron', sans-serif;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     letter-spacing: 1px;
     cursor: pointer;
     overflow: hidden;
