--- a/challenge/src/components/gamePage/gamePage.css
+++ b/challenge/src/components/gamePage/gamePage.css
@@ -1,33 +1,8 @@
-/* .gameOverModal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.7);
-    color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
+.game-container {
+  border: 1px solid #e6cbcb;
+  width: 90vw;
+  min-height: 45vw;
 }
-
-.modalContent {
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    text-align: center;
-}
-
-.refreshButton {
-    margin-top: 15px;
-    padding: 10px 20px;
-    background: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-} */
 
 /* Общие стили для всех модальных окон */
 .modal-overlay {
