--- a/challenge/src/components/buySaleBar/buySaleBar.css
+++ b/challenge/src/components/buySaleBar/buySaleBar.css
@@ -1,9 +1,11 @@
 .buy-sale-container {
-    position: absolute;
-    top: 350px;
+   /*  display: flex; */
+    display: none;
+    position: relative;
+    top: 550px;
     right: 5%;
     width: 20%;
-    display: flex;
+    
     flex-direction: column;
     gap: 15px;
     padding: 20px;
