--- a/challenge/src/components/enemyPlayField/enemyPlayField.css
+++ b/challenge/src/components/enemyPlayField/enemyPlayField.css
@@ -31,6 +31,7 @@ border: 1px solid white;
  */
 
  .enemy-cards-container {
+  display: none;
     position: absolute;
     top: 100px;
     left: 30px;
