--- a/challenge/src/components/gamePage/gamePage.css
+++ b/challenge/src/components/gamePage/gamePage.css
@@ -1,4 +1,7 @@
 .game-container {
+  position: absolute;
+  left: 5%;
+  top: 3%;
   border: 1px solid #e6cbcb;
   width: 90vw;
   min-height: 45vw;
