--- a/challenge/src/components/reloadButton/reloadButton.css
+++ b/challenge/src/components/reloadButton/reloadButton.css
@@ -1,17 +1,23 @@
 .resfresh_butt_cont {
-  position: relative;
-  border: 2px solid #49dd3b;
-  width: 30vw;
-  min-height: 5vw;
+  /* position: relative; */
+  position: absolute;
+  left: 30%;
+  bottom: 1%;
+  width: 18vw;
+  min-height: 3.5vw;
+  /* margin-bottom: 0px; */
+ 
 }
 
 .neon-refresh-btn {
   position: relative;
-  width: 30vw;
-  min-height: 5vw;
+  /* width: 20vw;
+  min-height: 5vw; */
   background: transparent;
-  border: none;
+  border-radius: 5px;
   padding: 12px 24px;
+  width: 18vw;
+  min-height: 3.5vw;
   color: #0ff;
   font-family: 'Orbitron', sans-serif;
   font-size: 2.0vw; /* Это будет базовым размером для всего содержимого */
