--- a/challenge/src/components/resultField/resultField.css
+++ b/challenge/src/components/resultField/resultField.css
@@ -1,9 +1,11 @@
 .result-field {
-    position: fixed;
-    top: 50%;
+   /*  position: fixed; */
+    /* top: 50%; */
+   /*  display: flex; */
+    display: none;
     left: 50%;
     transform: translate(-50%, -50%);
-    display: flex;
+    
     flex-direction: column;
     align-items: center;
     gap: 15px;
