--- a/challenge/src/components/reloadButton/reloadButton.css
+++ b/challenge/src/components/reloadButton/reloadButton.css
@@ -1,23 +1,17 @@
 .resfresh_butt_cont {
-  /* position: relative; */
   position: absolute;
-  left: 30%;
+  left: 27%;
   bottom: 1%;
-  width: 18vw;
-  min-height: 3.5vw;
-  /* margin-bottom: 0px; */
- 
+  width: 18%;
+  height: 5%;
 }
 
 .neon-refresh-btn {
   position: relative;
-  /* width: 20vw;
-  min-height: 5vw; */
   background: transparent;
   border-radius: 5px;
-  padding: 12px 24px;
-  width: 18vw;
-  min-height: 3.5vw;
+  width: 100%;
+  height: 100%;
   color: #0ff;
   font-family: 'Orbitron', sans-serif;
   font-size: 2.0vw; /* Это будет базовым размером для всего содержимого */
