--- a/challenge/src/components/gamePage/gamePage.css
+++ b/challenge/src/components/gamePage/gamePage.css
@@ -1,5 +1,6 @@
 .game-container {
-  position: absolute;
+ /*  position: absolute; */
+  position: fixed;
   left: 5%;
   top: 3%;
   border: 1px solid #e6cbcb;
