--- a/challenge/src/components/enemyPlayField/enemyPlayField.css
+++ b/challenge/src/components/enemyPlayField/enemyPlayField.css
@@ -4,16 +4,18 @@
     top: 5%;
     left: 3%;
     width: 30%;
+    height: 25%;
     background: rgba(0, 0, 0, 0.5);
     border: 2px solid #ff073a;
     border-radius: 10px;
-    padding: 10px;
+    /* padding: 10px; */
     box-shadow: 0 0 10px #ff073a;
 }
 
 .enemy-cards-grid {
   position: relative;
   /* border: 1px solid white; */
+    height: 98%;
     width: 82%;
     left: 5%;
     display: grid;
@@ -23,8 +25,8 @@
 }
 
 .enemy-card-slot {
-    width: 100%;
-    height: 92%;
+    width: 90%;
+    height: 87%;
     /* border: 1px solid white; */
 }
 
@@ -44,8 +46,8 @@
 }
 
 .enemy-card img {
-    width: 130%;
-    height: 130%;
+    width: 110%;
+    /* height: 130%; */
     object-fit: contain;
 }
 
