--- a/challenge/src/components/scoreBar/scoreBar.css
+++ b/challenge/src/components/scoreBar/scoreBar.css
@@ -1,54 +1,63 @@
-
-
- /* Основные стили */
-.score-bar-container {
-    /* display: flex; */
-    display: none;
-    align-items: center;
-    gap: 20px;
-    padding: 12px 20px;
-    min-width: 20%;
-    max-width: 30%;
-   /*  background: rgba(0, 0, 0, 0.6);
-    border: 1px solid #0ff; */
+.score-bar-main {
+    position: absolute;
+    top: 35%;
+    left: 3%;
+    width: 30%;
+    height: 10%;
+    background: rgba(0, 0, 0, 0.6);
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 255, 255, 0.3);
 }
 
-/* Стили отображения счета */
-.score-display {
+.score-bar-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
-    gap: 8px;
+    gap: 25%;
+    /* border: 1px solid rgb(51, 255, 0); */
+}
+
+/* Стили отображения счета */
+.score-display {
+    position: relative;
+    left: 0%;
+    width: 30%;
+    height: 100%;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    gap: 3%;
     font-family: 'Orbitron', sans-serif;
     color: #0ff;
-    padding: 8px 15px;
     border-radius: 5px;
+    /* border: 3px solid rgb(51, 255, 0); */
 }
 
 .score-label {
     text-shadow: 0 0 5px #0ff;
     letter-spacing: 1px;
+    font-size: 1.6vw;
 }
 
 .score-value {
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 1.6vw;
     color: #fff;
     text-shadow: 0 0 10px #fff;
 }
 
-.celebration {
-    margin-left: 5px;
-    animation: float 2s ease-in-out infinite;
-}
 
 /* Стили кнопки сброса */
 .neon-reset-btn {
     position: relative;
+
+    width: 30%;
+    border: 1px solid white;
     background: transparent;
-    border: none;
-    padding: 8px 16px;
+    /* border: none; */
+    /* padding: 8px 16px; */
     color: #f0f;
     font-family: 'Orbitron', sans-serif;
     font-size: 0.9rem;
@@ -57,18 +66,21 @@
     cursor: pointer;
     transition: all 0.3s ease;
     display: flex;
+    /* display: none; */
     align-items: center;
     gap: 6px;
 }
 
 .btn-icon {
-    font-size: 1.2rem;
+    font-size: 1.6vw;
     transition: transform 0.3s ease;
 }
 
 .btn-text {
+    display: none;
     position: relative;
     z-index: 1;
+    font-size: 1.6vw;
 }
 
 .btn-glow {
@@ -103,8 +115,17 @@
 
 /* Анимации */
 @keyframes float {
-    0%, 100% { transform: translateY(0); opacity: 1; }
-    50% { transform: translateY(-5px); opacity: 0.8; }
+
+    0%,
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+    50% {
+        transform: translateY(-5px);
+        opacity: 0.8;
+    }
 }
 
 .record-pulse {
@@ -112,6 +133,11 @@
 }
 
 @keyframes pulse {
-    0% { text-shadow: 0 0 5px #0ff; }
-    100% { text-shadow: 0 0 15px #0ff, 0 0 20px #0ff; }
+    0% {
+        text-shadow: 0 0 5px #0ff;
+    }
+
+    100% {
+        text-shadow: 0 0 15px #0ff, 0 0 20px #0ff;
+    }
 }
