--- a/challenge/src/components/app/App.css
+++ b/challenge/src/components/app/App.css
@@ -1,11 +1,4 @@
-/* body {
-    background-color:#1f1c1c;
-    background-image: url('../../resources/img/backGround.jpg');
-    background-size: 90%;
-    background-repeat: no-repeat;
-    border: 3px solid green;
-    background-position: 50% -5%;   
-} */
+
 body {
       width: 100%;
       height: 100vh;
@@ -18,7 +11,7 @@ body {
           #050314 100%
         );
       position: relative;
-      /* overflow: hidden; */
+      overflow: hidden;
       z-index: -1;
     }
 
@@ -70,42 +63,3 @@ body {
       100% { transform: scale(1.05); opacity: 1; }
     }
 
- /*    @keyframes drift {
-      0% { transform: translate(0, 0); }
-      25% { transform: translate(-5%, -3%); }
-      50% { transform: translate(0, -5%); }
-      75% { transform: translate(5%, -3%); }
-      100% { transform: translate(0, 0); }
-    } */
-
-   /*  @keyframes float {
-      0% { transform: translate(0, 0); }
-      33% { transform: translate(10%, 5%); }
-      66% { transform: translate(-5%, 10%); }
-      100% { transform: translate(0, 0); }
-    } */
-
-
-
-/* Основные стили */
-/* body {
-  background: radial-gradient(circle, #0a0e2a 0%, #000000 100%);
-  font-family: 'Orbitron', sans-serif;
-  color: #03e9f4;
-  margin: 0;
-  overflow-x: hidden;
-} */
-
-/* Неоновые эффекты */
-/* .neon-box {
-  border: 1px solid #03e9f4;
-  box-shadow: 0 0 10px #03e9f4, inset 0 0 5px #03e9f4;
-  border-radius: 8px;
-} */
-
-/* Анимации */
-/* @keyframes pulse {
-  0% { opacity: 0.8; }
-  50% { opacity: 1; transform: scale(1.02); }
-  100% { opacity: 0.8; }
-} */
