--- a/challenge/src/components/scoreBar/scoreBar.css
+++ b/challenge/src/components/scoreBar/scoreBar.css
@@ -1,9 +1,9 @@
 .score-bar-main {
     position: absolute;
-    top: 35%;
+    top: 30%;
     left: 3%;
     width: 30%;
-    height: 10%;
+    height: 7%;
     background: rgba(0, 0, 0, 0.6);
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 255, 255, 0.3);
@@ -22,13 +22,13 @@
 /* Стили отображения счета */
 .score-display {
     position: relative;
-    left: 0%;
+    left: 5%;
     width: 30%;
     height: 100%;
     display: flex;
     /* justify-content: center; */
     align-items: center;
-    gap: 3%;
+    gap: 5%;
     font-family: 'Orbitron', sans-serif;
     color: #0ff;
     border-radius: 5px;
@@ -36,24 +36,27 @@
 }
 
 .score-label {
+
     text-shadow: 0 0 5px #0ff;
     letter-spacing: 1px;
-    font-size: 1.6vw;
+    font-size: min(1.5vw, 2.5vh, 18px);
+    /* border: 3px solid rgb(51, 255, 0); */
 }
 
 .score-value {
     font-weight: bold;
-    font-size: 1.6vw;
+    font-size: min(1.5vw, 2.5vh, 18px);
     color: #fff;
     text-shadow: 0 0 10px #fff;
+    /* border: 3px solid rgb(51, 255, 0); */
 }
 
 
 /* Стили кнопки сброса */
 .neon-reset-btn {
     position: relative;
-
-    width: 30%;
+    left: 15%;
+    width: 10%;
     border: 1px solid white;
     background: transparent;
     /* border: none; */
@@ -72,7 +75,7 @@
 }
 
 .btn-icon {
-    font-size: 1.6vw;
+    font-size: min(1.5vw, 2.5vh, 18px);
     transition: transform 0.3s ease;
 }
 
@@ -80,7 +83,7 @@
     display: none;
     position: relative;
     z-index: 1;
-    font-size: 1.6vw;
+    font-size: min(1.5vw, 2.5vh, 18px);
 }
 
 .btn-glow {
