--- a/challenge/src/components/enemyPlayField/enemyPlayField.css
+++ b/challenge/src/components/enemyPlayField/enemyPlayField.css
@@ -1,68 +1,82 @@
  .enemy-cards-container {
-    /* border: 1px solid white; */
-    position: absolute;
-    top: 3%;
-    left: 3%;
-    width: 30%;
-    height: 25%;
-    background: rgba(0, 0, 0, 0.5);
-    border: 2px solid #ff073a;
-    border-radius: 10px;
-    /* padding: 10px; */
-    box-shadow: 0 0 10px #ff073a;
-}
 
-.enemy-cards-grid {
-  position: relative;
-  /* border: 1px solid white; */
-    height: 98%;
-    width: 82%;
-    left: 5%;
-    display: grid;
-    grid-template-columns: repeat(6, 16.66%);
-    place-items: center;
-    gap: 2%;
-}
+     position: absolute;
+     top: 3%;
+     left: 3%;
+     width: 30%;
+     height: 25%;
+     background: rgba(0, 0, 0, 0.5);
+     border: 2px solid #ff073a;
+     border-radius: 10px;
 
-.enemy-card-slot {
-    width: 90%;
-    height: 87%;
-    /* border: 1px solid white; */
-}
+     box-shadow: 0 0 10px #ff073a;
+     padding: 0;
+ }
 
-.enemy-card, .empty-card {
-    width: 100%;
-    height: 100%;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+ .enemy-cards-grid {
+     position: relative;
+     height: 98%;
+     width: 82%;
+     left: 5%;
+     display: grid;
+     grid-template-columns: repeat(6, 16.66%);
+     place-items: center;
+     gap: 2%;
+     
+ }
 
-.enemy-card {
-    /* width: 15%;
-    height: 15%; */
-    background: rgba(255, 255, 255, 0.1);
-    border: 1px solid #ff073a;
-    box-shadow: 0 0 5px #ff073a;
-}
+ .enemy-card-slot {
+     width: 90%;
+     height: 87%;
+     border: 1px solid white;
 
-.enemy-card img {
- width: 110%;
-   /*  height: 130%;  */
-    scale: 1.5;
-    object-fit: contain;
-}
+ }
 
-.empty-card {
-    background: rgba(255, 255, 255, 0.05);
-    border: 1px dashed #ff073a;
-}
+ .enemy-card {
+     width: 100%;
+     height: 100%;
+     border-radius: 5px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     background: rgba(255, 255, 255, 0.1);
+     border: 1px solid #ff073a;
+     box-shadow: 0 0 5px #ff073a;
 
-.empty-card img {
-    width: 70%;
-    height: 70%;
-    opacity: 0.7;
-    filter: drop-shadow(0 0 3px #ff073a);
-}
+ }
 
+ .empty-card {
+     width: 100%;
+     height: 100%;
+     border-radius: 5px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     background: rgba(255, 255, 255, 0.05);
+     border: 1px dashed #ff073a;
+     padding: 0;
+     margin: 0;
+ }
+
+
+
+ .enemy-card img {
+     width: 110%;
+     scale: 1.5;
+     object-fit: contain;
+ }
+
+ .empty-card img {
+     width: 100%;  /* 50% от ширины родителя */
+    height: auto;
+    margin: 0;
+ }
+
+
+
+
+
+
+
+
+ 
