--- a/challenge/src/components/myPlayField/myPlayField.css
+++ b/challenge/src/components/myPlayField/myPlayField.css
@@ -17,38 +17,32 @@
   position: relative;
   display: flex;
   justify-content: space-around;
+ /*  gap:5%; */
   top: 3%;
   width: 90%;
   height: 70%;
   padding: 5% 5%;
   transition: all 0.3s ease;
+  /* border: 3px solid rgb(219, 41, 50); */
   
 }
 
 /* Стили карт */
 .card-slot {
   position: relative;
-  width: 70%;
   display: flex;
   flex-direction: column;
   align-items: center;
   transition: all 0.3s ease;
-  /* border: 2px solid rgb(49, 175, 60); */
+/*   border: 2px solid rgb(49, 175, 60); */
 }
 
-/* .card-slot.empty {
-  flex: 0;
-  min-width: 0;
-  width: 0;
-  opacity: 0;
-  transform: scale(0);
-  margin: 0;
-  pointer-events: none;
-} */
+.card-slot.empty {
+  display: none;
+}
+
 
 /* Стили счетчиков */
-
-
 .card-counter {
   position: relative;
   bottom: 5%;
@@ -74,7 +68,8 @@
 }
 
 .card-button {
-  width: 90%;
+ /*  width: 90%; */
+  height: 60%;
   /* max-width: 120px; */
   aspect-ratio: 0.7;
   border: 2px solid rgb(72, 69, 233);
@@ -102,7 +97,7 @@
   border-radius: 10px;
   background: rgba(0, 0, 0, 0.3);
   box-shadow: 0 0 10px #0ff, inset 0 0 5px #0ff;
-  border: 2px solid rgb(49, 175, 60); 
+  /* border: 2px solid rgb(49, 175, 60);  */
 }
 
 
