--- a/challenge/src/components/enemyPlayField/enemyPlayField.css
+++ b/challenge/src/components/enemyPlayField/enemyPlayField.css
@@ -28,7 +28,7 @@
  .enemy-card-slot {
      width: 90%;
      height: 87%;
-     border: 1px solid white;
+     /* border: 1px solid white; */
 
  }
 
