--- a/challenge/src/components/myPlayField/myPlayField.css
+++ b/challenge/src/components/myPlayField/myPlayField.css
@@ -1,5 +1,5 @@
 /* Основной контейнер */
-.myFieldAll { 
+.myFieldAll {
   position: absolute;
   width: 30%;
   height: 50%;
@@ -17,14 +17,11 @@
   position: relative;
   display: flex;
   justify-content: space-around;
- /*  gap:5%; */
   top: 3%;
   width: 90%;
   height: 70%;
   padding: 5% 5%;
   transition: all 0.3s ease;
-  /* border: 3px solid rgb(219, 41, 50); */
-  
 }
 
 /* Стили карт */
@@ -34,7 +31,6 @@
   flex-direction: column;
   align-items: center;
   transition: all 0.3s ease;
-/*   border: 2px solid rgb(49, 175, 60); */
 }
 
 .card-slot.empty {
@@ -49,7 +45,7 @@
   width: 55%;
   height: 25%;
   border-radius: 50%;
-  background: 
+  background:
     radial-gradient(circle at center, rgba(0, 255, 255, 0.2) 0%, rgba(0, 255, 255, 0.1) 70%, transparent 100%),
     url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40"><circle cx="20" cy="20" r="19" fill="none" stroke="%230ff" stroke-width="0.5" stroke-dasharray="2 1"/></svg>');
   background-size: cover;
@@ -68,12 +64,10 @@
 }
 
 .card-button {
- /*  width: 90%; */
   height: 60%;
-  /* max-width: 120px; */
-  aspect-ratio: 0.7;
-  border: 2px solid rgb(72, 69, 233);
- /*  border: none; */
+  aspect-ratio: 0.690;
+  border: 2px solid #0ff;
+  box-shadow: 0 0 15px #0ff, inset 0 0 10px rgba(0, 255, 255, 0.3);
   border-radius: 10px;
   background-size: contain;
   background-repeat: no-repeat;
@@ -92,14 +86,11 @@
   left: 20%;
   display: flex;
   justify-content: space-around;
- /*  gap: px; */
   border: 2px solid #0ff;
   border-radius: 10px;
   background: rgba(0, 0, 0, 0.3);
   box-shadow: 0 0 10px #0ff, inset 0 0 5px #0ff;
-  /* border: 2px solid rgb(49, 175, 60);  */
 }
-
 
 
 .card-button.rock {
@@ -129,9 +120,14 @@
 }
 
 
-
 @keyframes float {
-  0%, 100% { transform: translateY(0); }
-  50% { transform: translateY(-5px); }
-}
 
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-5px);
+  }
+}
